# teckel-api

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.fly  README.md  fly.toml
.github/workflows/: ci.yml  deploy-fly.yml  integration.yml  trigger-docs-deploy.yml
crates/teckel-api/: Cargo.toml
crates/teckel-api/src/: lib.rs
crates/teckel-datafusion/: Cargo.toml
crates/teckel-datafusion/src/: backend.rs  lib.rs  reader.rs  transforms.rs  type_mapping.rs  writer.rs
crates/teckel-engine/: Cargo.toml
crates/teckel-engine/src/: backend.rs  dag.rs  dry_run.rs  executor.rs  hooks.rs  lib.rs  quality.rs
crates/teckel-polars/: Cargo.toml
crates/teckel-polars/src/: backend.rs  lib.rs  reader.rs  transforms.rs  writer.rs
crates/teckel-remote/: Cargo.toml  build.rs
crates/teckel-remote/src/: backend.rs  lib.rs
crates/teckel-server/: Cargo.toml
crates/teckel-server/src/: job.rs  main.rs  routes.rs  worker.rs
crates/teckel-spark/: Cargo.toml
crates/teckel-spark/src/: backend.rs  lib.rs  reader.rs  transforms.rs  writer.rs
crates/teckel-spark/testdata/: departments.csv  employees.csv
crates/teckel-spark/tests/: test_pipeline.rs  test_read_write.rs  test_transforms.rs
crates/teckel-spark/tests/common/: mod.rs
crates/teckel-worker/: Cargo.toml
crates/teckel-worker/src/: main.rs  service.rs
proto/: teckel.proto
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  teckelSharedConfig.ts
website/docs/: intro.md
website/docs/architecture/: backend-trait.md  dag-executor.md  overview.md
website/docs/backends/: custom-backend.md  datafusion.md  overview.md  polars.md  spark-connect.md
website/docs/guides/: dry-run-explain.md  first-pipeline.md
website/docs/server/: deployment.md  grpc-api.md  job-management.md  rest-api.md
website/src/css/: custom.css
