[workspace]
resolver = "2"
members = [
    "crates/teckel-engine",
    "crates/teckel-datafusion",
    "crates/teckel-api",
    "crates/teckel-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/eff3ct0/teckel-api"
authors = ["Rafael Fernandez <eff3ct0>"]

[workspace.dependencies]
# From teckel-rs (parser + model)
teckel-model = { git = "https://github.com/eff3ct0/teckel-rs" }
teckel-parser = { git = "https://github.com/eff3ct0/teckel-rs" }

# DataFusion + Arrow
datafusion = "44"
arrow = { version = "54", features = ["prettyprint"] }

# Graph
petgraph = "0.6"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client (for enrich transform)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1"

# Internal crates
teckel-engine = { path = "crates/teckel-engine" }
teckel-datafusion = { path = "crates/teckel-datafusion" }
teckel-api = { path = "crates/teckel-api" }
