[package]
name = "teckel-datafusion"
description = "Apache DataFusion local backend for Teckel v2.0 pipeline execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
teckel-model = { workspace = true }
teckel-engine = { workspace = true }
datafusion = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
