[package]
name = "teckel-remote"
description = "gRPC remote backend for distributed Teckel pipeline execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
teckel-model = { workspace = true }
teckel-engine = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
