[package]
name = "teckel-server"
description = "Non-blocking HTTP server for Teckel v2.0 pipeline execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "teckel-server"
path = "src/main.rs"

[dependencies]
teckel-api = { workspace = true }
teckel-model = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }
